# File-Metadata-Analyzer

./: .gitignore  README.md  pyproject.toml
app/: main.py  scanner.py  utils.py
app/analyzers/: archive.py  audio.py  docx.py  exe.py  images.py  pdf.py  video.py
app/reporters/: html.py  json.py
app/schemas/: schem.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
tests/: test_archive.py  test_audio.py  test_docx.py  test_exe.py  test_html.py  test_images.py  test_json.py  test_pdf.py  test_scanner.py  test_utils.py  test_video.py
